--- a/css/all.css
+++ b/css/all.css
@@ -114,7 +114,7 @@ a {
 
 .logo {
   display: block;
-  background-image: url(img/logo.png);
+  background-image: url(../img/logo.png);
   background-repeat: no-repeat;
   background-position: center;
   width: 80px;
@@ -170,7 +170,7 @@ a {
   }
 }
 .home-header {
-  background-image: url(img/home-header.png);
+  background-image: url(../img/home-header.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -210,7 +210,7 @@ a {
 
 @media (max-width: 576px) {
   .home-header {
-    background-image: url(img/home-header-sm.png);
+    background-image: url(../img/home-header-sm.png);
     height: 396px;
   }
   .home-header .container-sm {
@@ -338,7 +338,7 @@ a {
 }
 
 .design {
-  background-image: url("/img/index-bg.png");
+  background-image: url("../img/index-bg.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -367,7 +367,7 @@ a {
   }
   .design-sm-screen {
     display: block;
-    background-image: url("img/index-bg-sm.png");
+    background-image: url("../img/index-bg-sm.png");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
