--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -17,7 +17,7 @@
 
 .logo {
 	display: block;
-	background-image: url(img/logo.png);
+	background-image: url(../img/logo.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	width: 80px;
@@ -78,7 +78,7 @@
 }
 
 .home-header {
-	background-image: url(img/home-header.png);
+	background-image: url(../img/home-header.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -119,7 +119,7 @@
 @media (max-width: 576px) {
 
 	.home-header {
-		background-image: url(img/home-header-sm.png);
+		background-image: url(../img/home-header-sm.png);
 		height: 396px;
 	}
 
@@ -264,7 +264,7 @@
 }
 
 .design {
-	background-image: url("/img/index-bg.png");
+	background-image: url("../img/index-bg.png");
 	background-repeat: no-repeat;
 	background-position: center;
 	background-size: cover;
@@ -296,7 +296,7 @@
 
 	.design-sm-screen {
 		display: block;
-		background-image: url("img/index-bg-sm.png");
+		background-image: url("../img/index-bg-sm.png");
 		background-repeat: no-repeat;
 		background-position: center;
 		background-size: cover;
