--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -444,10 +444,11 @@
 	width: auto;
 }
 
+.btn{
+	text-align: center;
+}
+
 .contact a {
-	max-width: 416px;
-	margin: 0 auto;
-	display: block;
 	padding: 16px 176px;
 	background-color: #AA0601;
 	color: #FFFFFF;
