--- a/css/all.css
+++ b/css/all.css
@@ -505,10 +505,11 @@ a {
   width: auto;
 }
 
+.btn {
+  text-align: center;
+}
+
 .contact a {
-  max-width: 416px;
-  margin: 0 auto;
-  display: block;
   padding: 16px 176px;
   background-color: #AA0601;
   color: #FFFFFF;
