--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -449,6 +449,7 @@
 }
 
 .contact a {
+	display: inline-block;
 	padding: 16px 176px;
 	background-color: #AA0601;
 	color: #FFFFFF;
@@ -478,6 +479,10 @@
 
 	.check {
 		margin-bottom: 24px;
+	}
+
+	.contact a {
+		padding: 16px 142px;
 	}
 
 }
