--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -682,6 +682,16 @@
 
 }
 
+@media (max-width: 576px) {
+	.statement-container {
+		padding-left: 14px;
+		padding-right: 14px;
+		padding-top: 16px;
+		padding-bottom: 24px;
+	}
+}
+
+
 @media (max-width: 768px) {
 	.container-md {
 		padding: 0 36px;
