--- a/css/all.css
+++ b/css/all.css
@@ -294,7 +294,7 @@ a {
 }
 
 .frames-cards h3 {
-  font-size: 48px;
+  font-size: 2.5vw;
   font-style: italic;
   font-weight: 900;
   color: var(--text-color);
