--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -357,7 +357,7 @@
 	margin-bottom: 48px;
 }
 
-.customer .date {
+.customer time {
 	font-size: 14px;
 	color: #707070;
 	margin-bottom: 0px;
@@ -442,6 +442,8 @@
 	padding-top: 6px;
 	padding-bottom: 6px;
 	padding-left: 12px;
+	background-color: transparent;
+	border: 1px solid #000000;
 }
 
 .tel input {
