--- a/css/all.css
+++ b/css/all.css
@@ -109,7 +109,7 @@ a {
 
 .logo {
   display: block;
-  background-image: url(../img/logo.png);
+  background-image: url(../logo-white.png);
   background-repeat: no-repeat;
   background-position: center;
   width: 80px;
