--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -13,7 +13,7 @@
 
 .logo {
 	display: block;
-	background-image: url(../logo-white.png);
+	background-image: url(../img/logo-white.png);
 	background-repeat: no-repeat;
 	background-position: center;
 	width: 80px;
