--- a/css/all.css
+++ b/css/all.css
@@ -112,6 +112,7 @@ a {
   background-image: url(../img/logo-white.png);
   background-repeat: no-repeat;
   background-position: center;
+  background-size: contain;
   width: 80px;
   height: 50px;
   text-indent: -9999px;
