--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -16,6 +16,7 @@
 	background-image: url(../img/logo-white.png);
 	background-repeat: no-repeat;
 	background-position: center;
+	background-size: contain;
 	width: 80px;
 	height: 50px;
 	text-indent: -9999px;
