--- a/css/all.css
+++ b/css/all.css
@@ -407,18 +407,15 @@ a {
   border-radius: 4px;
 }
 
+.customer {
+  display: flex;
+  min-height: 205px;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .endorsement-cards-content h3 {
   margin-bottom: 8px;
-}
-
-.customer-1 p,
-.customer-3 p,
-.customer-4 p {
-  margin-bottom: 72px;
-}
-
-.customer-2 p {
-  margin-bottom: 48px;
 }
 
 .customer time {
@@ -430,14 +427,6 @@ a {
 @media (max-width: 768px) {
   .endorsement-cards-content {
     margin-bottom: 24px;
-  }
-  .customer-1 p {
-    margin-bottom: 96px;
-  }
-  .customer-2 p,
-  .customer-3 p,
-  .customer-4 p {
-    margin-bottom: 72px;
   }
   .endorsement {
     padding-bottom: 56px;
@@ -454,14 +443,6 @@ a {
   .endorsement h2 {
     font-size: 24px;
     margin-bottom: 24px;
-  }
-  .customer-1 p,
-  .customer-3 p,
-  .customer-4 p {
-    margin-bottom: 96px;
-  }
-  .customer-2 p {
-    margin-bottom: 72px;
   }
 }
 .contact {
@@ -504,7 +485,7 @@ a {
   font-size: 15px;
 }
 
-.mail input {
+.email input {
   font-size: 15px;
 }
 
@@ -562,7 +543,8 @@ a {
     margin-bottom: 24px;
   }
   .contact a {
-    padding: 16px 142px;
+    padding: 16px 0;
+    width: 100%;
   }
 }
 .footer {
