--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -344,18 +344,15 @@
 	border-radius: 4px;
 }
 
+.customer{
+	display: flex;
+	min-height: 205px;
+	flex-direction: column;
+	justify-content: space-between;
+}
+
 .endorsement-cards-content h3 {
 	margin-bottom: 8px;
-}
-
-.customer-1 p,
-.customer-3 p,
-.customer-4 p {
-	margin-bottom: 72px;
-}
-
-.customer-2 p {
-	margin-bottom: 48px;
 }
 
 .customer time {
@@ -368,16 +365,6 @@
 
 	.endorsement-cards-content {
 		margin-bottom: 24px;
-	}
-
-	.customer-1 p {
-		margin-bottom: 96px;
-	}
-
-	.customer-2 p,
-	.customer-3 p,
-	.customer-4 p {
-		margin-bottom: 72px;
 	}
 
 	.endorsement {
@@ -400,15 +387,6 @@
 		margin-bottom: 24px;
 	}
 
-	.customer-1 p,
-	.customer-3 p,
-	.customer-4 p {
-		margin-bottom: 96px;
-	}
-
-	.customer-2 p {
-		margin-bottom: 72px;
-	}
 }
 
 .contact {
@@ -451,7 +429,7 @@
 	font-size: 15px;
 }
 
-.mail input {
+.email input {
 	font-size: 15px;
 }
 
@@ -517,7 +495,8 @@
 	}
 
 	.contact a {
-		padding: 16px 142px;
+		padding: 16px 0;
+        width: 100%;
 	}
 
 }
