--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -4,7 +4,48 @@
 	padding: 0 12px;
 }
 
+.row {
+	display: flex;
+	/* 抵銷最左邊和最右邊的 col 多出來的 padding */
+	flex-wrap: wrap;
+	margin-left: -12px;
+	margin-right: -12px;
+}
 
+.col-3 {
+	/* 100% / 4 */
+	width: 25%;
+	padding-left: 12px;
+	padding-right: 12px;
+}
+
+.col-4 {
+	/* 100% / 3 */
+	width: 33.333%;
+	padding-left: 12px;
+	padding-right: 12px;
+}
+
+@media (max-width: 768px) {
+	.container-md {
+		padding: 0 36px;
+	}
+
+	.col-md-6 {
+		width: 50%;
+	}
+
+}
+
+@media (max-width: 576px) {
+	.container-sm {
+		padding: 0 14px;
+	}
+
+	.col-sm-12 {
+		width: 100%;
+	}
+}
 
 
 .nav {
@@ -152,21 +193,6 @@
 	margin-bottom: 16px;
 }
 
-.row {
-	display: flex;
-	/* 抵銷最左邊和最右邊的 col 多出來的 padding */
-	flex-wrap: wrap;
-	margin-left: -12px;
-	margin-right: -12px;
-}
-
-.col-3 {
-	/* 100% / 4 */
-	width: 25%;
-	padding-left: 12px;
-	padding-right: 12px;
-}
-
 @media (max-width: 576px) {
 	.expertise {
 		padding-top: 40px;
@@ -203,12 +229,12 @@
 	margin-bottom: 48px;
 }
 
-.col-4 {
-	/* 100% / 3 */
-	width: 33.333%;
-	padding-left: 12px;
-	padding-right: 12px;
-}
+// .col-4 {
+// 	/* 100% / 3 */
+// 	width: 33.333%;
+// 	padding-left: 12px;
+// 	padding-right: 12px;
+// }
 
 .frames-cards img {
 	margin-bottom: 8px;
@@ -670,27 +696,5 @@
 		padding-right: 14px;
 		padding-top: 16px;
 		padding-bottom: 24px;
-	}
-}
-
-
-@media (max-width: 768px) {
-	.container-md {
-		padding: 0 36px;
-	}
-
-	.col-md-6 {
-		width: 50%;
-	}
-
-}
-
-@media (max-width: 576px) {
-	.container-sm {
-		padding: 0 14px;
-	}
-
-	.col-sm-12 {
-		width: 100%;
 	}
 }
